--- a/Omal/Views/OmalContactPageV.xaml
+++ b/Omal/Views/OmalContactPageV.xaml
@@ -4,6 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
+    BackgroundColor="White"
     x:Class="Omal.Views.OmalContactPageV">
 	<ContentPage.Content>
         <ScrollView>
