Altre modifiche grafiche

--- a/Omal/Views/AnagraficaClientiDetailV.xaml
+++ b/Omal/Views/AnagraficaClientiDetailV.xaml
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage Title="{Binding CurTitle}" xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Omal.Views.AnagraficaClientiDetailV">
+    x:Class="Omal.Views.AnagraficaClientiDetailV" BackgroundColor="White">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Modifica" Command="{Binding EditCommand}" />
     </ContentPage.ToolbarItems>
 	<ContentPage.Content>
-        <TableView BindingContext="{Binding CurCliente}">
-            <TableView.Root>
-                <TableSection>
-                    <TextCell Text="{Binding Nome}" Detail="Nome"  />
-                    <TextCell Text="{Binding Cognome}" Detail="Cognome"  />
-                    <TextCell Text="{Binding RagioneSociale}" Detail="Ragione Sociale"  />
-                    <TextCell Text="{Binding PIva}" Detail="P.Iva" />
-                    <TextCell Text="{Binding CFiscale}" Detail="Codice Fiscale" />
-                </TableSection>
-                <TableSection Title="Posizione">
-                    <TextCell Text="{Binding Indirizzo}" Detail="Indirizzo"/>
-                    <TextCell Text="{Binding Citta}" Detail="Comune"/>
-                    <TextCell Text="{Binding Cap}" Detail="Cap"/>
-                    <TextCell Text="{Binding Provincia}" Detail="Provincia"/>
-                    <TextCell Text="{Binding Nazione}" Detail="Nazione"/>
-                </TableSection>
-                <TableSection Title="Contatti">
-                    <TextCell Text="{Binding Email}" Detail="Email" />
-                    <TextCell Text="{Binding Telefono}" Detail="Telefono"/>
-                    <TextCell Text="{Binding Fax}" Detail="Fax"/>
-                </TableSection>
-            </TableView.Root>
-        </TableView>
+        <ScrollView>
+        <StackLayout Margin="5">
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.RagioneSociale}"   />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.PIva}"  />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.CFiscale}"  />
+        <Label Style="{StaticResource Titolo}" Text="{Binding StrPosizione}" BackgroundColor="#EAEAEA" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Indirizzo}" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Città}" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Cap}" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Provincia}" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Nazione}" />
+        <Label  Style="{StaticResource Titolo}" Text="{Binding StrContatti}" BackgroundColor="#EAEAEA" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Email}" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Telefono}" />
+        <Label Style="{StaticResource WhiteEntry}" Text="{Binding CurCliente.Fax}" />
+        </StackLayout>
+            </ScrollView>
 	</ContentPage.Content>
 </ContentPage>
