--- a/Omal/Views/LoginV.xaml
+++ b/Omal/Views/LoginV.xaml
@@ -7,10 +7,10 @@
     </ContentPage.Padding>
 	<ContentPage.Content>
         <StackLayout Orientation="Vertical" Padding="20">
-        <Label Style="{StaticResource Descrizione}"  Text="Effettua il login per accedere ad ordini disegni 3D e prezzi di ogni articolo">
+        <Label Style="{StaticResource Descrizione}"  Text="{Binding LogonTesto}">
         </Label>
-            <Entry x:Name="UserName"  Placeholder="Indirizzo Email" Text="{Binding Email}" />
-            <Entry  x:Name="Password" Placeholder="Password" IsPassword="true" Text="{Binding Password}" />
+            <Entry Style="{StaticResource WhiteEntry}" x:Name="UserName"  Placeholder="Indirizzo Email" Text="{Binding Email}" />
+            <Entry Style="{StaticResource WhiteEntry}" x:Name="Password" Placeholder="Password" IsPassword="true" Text="{Binding Password}" />
             <StackLayout Orientation="Horizontal" HorizontalOptions="EndAndExpand">
                 <Button x:Name="LoginBtn"  Text="Login" Command="{Binding LoginCommand}" />
                 <Button  Text="Back" Command="{Binding CanceLoginCommand}" />
