--- a/Omal/App.xaml
+++ b/Omal/App.xaml
@@ -42,6 +42,11 @@
                 <Setter Property="FontFamily" Value="Montserrat-Medium" />
                 <Setter Property="BackgroundColor" Value="#60A5D1" />
             </Style>
+            <Style x:Key="WhiteEntry" TargetType="Entry">
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="FontFamily" Value="Montserrat-Medium" />
+                <Setter Property="BackgroundColor" Value="#FFFFFF" />
+            </Style>
             <Style TargetType="CControls:CualevaRoundedEntry">
                 <Setter Property="TextColor" Value="#FFFFFF" />
                 <Setter Property="FontFamily" Value="Montserrat-Medium" />
