--- a/iOS/LaunchScreen.storyboard
+++ b/iOS/LaunchScreen.storyboard
@@ -21,11 +21,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="197" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="LogoOmal.png" opaque="NO" preservesSuperviewLayoutMargins="YES">
-                                <rect key="frame" x="558" y="444.5" width="239.5" height="127.5"/>
+                                <rect key="frame" x="560" y="424" width="245" height="176"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinX="YES" flexibleMaxY="YES" flexibleMinY="YES"/>
+                                <rect key="contentStretch" x="0.0" y="0" width="1" height="1"/>
                             </imageView>
                         </subviews>
-                        <color key="tintColor" colorSpace="calibratedRGB" red="0.30980392156862746" green="0.57647058823529407" blue="0.77647058823529413" alpha="1"/>
                         <color key="backgroundColor" colorSpace="calibratedRGB" red="0.30980392156862746" green="0.57647058823529407" blue="0.77647058823529413" alpha="1"/>
                     </view>
                 </viewController>
