--- a/Omal/Views/InfoProductV.xaml
+++ b/Omal/Views/InfoProductV.xaml
@@ -6,7 +6,7 @@
     <ContentPage.Content>
         <StackLayout Orientation="Vertical" Margin="5">
             <Label Style="{StaticResource Titolo}" Text="{Binding CurProdotto.nome}" BackgroundColor="#EAEAEA" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
-            <ListView SelectedItem="{Binding CurGruppoProdotto}" ItemsSource="{Binding GruppoMetadati}">
+            <ListView x:Name="CurGruppo" SelectedItem="{Binding CurGruppoProdotto}" ItemsSource="{Binding GruppoMetadati}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextCell Text="{Binding gruppo_metadati_it}" />
