Sistemazione grafica parte 2

--- a/Omal/App.xaml
+++ b/Omal/App.xaml
@@ -63,10 +63,21 @@
                 <Setter Property="HorizontalOptions" Value="End" />
                 <Setter Property="FontFamily" Value="Montserrat-Bold" />
             </Style>
+            <Style x:Key="Azzurro" TargetType="Button">
+                <Setter Property="BorderWidth" Value="0" />
+                <Setter Property="TextColor" Value="#FFFFFF" />
+                <Setter Property="WidthRequest" Value="100" />
+                <Setter Property="BorderRadius" Value="20" />
+                <Setter Property="BackgroundColor" Value="#60A5D1" />
+                <Setter Property="Margin" Value="5" />
+                <Setter Property="HorizontalOptions" Value="End" />
+                <Setter Property="FontFamily" Value="Montserrat-Bold" />
+            </Style>
             <Style TargetType="ListView">
                 <Setter Property="BackgroundColor" Value="#FFFFFF" />
             </Style>
             <Converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+            <Converters:UpperCaseConverter x:Key="UpperCaseConverter" />
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
