--- a/Omal/Views/SearchProductV.xaml
+++ b/Omal/Views/SearchProductV.xaml
@@ -6,22 +6,33 @@
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <ScrollView>
-        <StackLayout Orientation="Vertical" Margin="5">
-            <Label Style="{StaticResource Titolo}" Text="{Binding CurProdotto.nome}" BackgroundColor="#EAEAEA" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
+            
+                <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+            
+        <StackLayout Grid.Row="0" Orientation="Vertical" BackgroundColor="#EAEAEA">
+            <Label Margin="5" Style="{StaticResource Titolo}" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
+        </StackLayout>
+        <StackLayout Grid.Row="1" Orientation="Vertical" BackgroundColor="#FFFFFF">
             <Image HorizontalOptions="Center" Margin="5" HeightRequest="100" Source="{Binding CurProdotto.immagine_placeholder}" />
-            <Button Margin="5" BackgroundColor="#EAEAEA" TextColor="#5E5B5B" Text="MAGGIORI INFO" HorizontalOptions="Fill" Command="{Binding GoToDetailCommand}" />                
-            <StackLayout Orientation="Vertical" BackgroundColor="#EAEAEA">
+            <Button Margin="5" Style="{StaticResource Azzurro}" TextColor="White" Text="{Binding BtnMaggioriInfo, Converter={StaticResource UpperCaseConverter}}" HorizontalOptions="Fill" Command="{Binding GoToDetailCommand}" />                
+        </StackLayout>
+        <StackLayout Grid.Row="2" Orientation="Vertical" BackgroundColor="#EAEAEA">
             <Label Margin="0,10,0,0" HorizontalTextAlignment="Center" Style="{StaticResource Titolo}" Text="{Binding StrTrovaArticolo}" />
             <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker1}" IsVisible="{Binding Picker1IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker1}" ItemsSource="{Binding Picker1}"  />
             <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker2}" IsVisible="{Binding Picker2IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker2}" ItemsSource="{Binding Picker2}"  />
             <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker3}" IsVisible="{Binding Picker3IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker3}" ItemsSource="{Binding Picker3}"  />
             <Picker Margin="5,0,5,0" Title="{Binding DescrizionePicker4}" IsVisible="{Binding Picker4IsVisible}"  HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker4}" ItemsSource="{Binding Picker4}"  />
-            <StackLayout Margin="5" HorizontalOptions="EndAndExpand"  Orientation="Horizontal">
-                <Button IsVisible="{Binding Picker2IsVisible}" Text="{Binding StrBtnPulisci}" Command="{Binding PulisciCommand}" />                
-                    <Button Text="Trova" Command="{Binding CercaArticoliCommand}" />                
+            <StackLayout Margin="5" HorizontalOptions="Center"  Orientation="Horizontal">
+                <Button IsVisible="{Binding Picker2IsVisible}" Text="{Binding StrBtnPulisci, Converter={StaticResource UpperCaseConverter}}" Command="{Binding PulisciCommand}" />                
+                <Button Text="{Binding BtnTrova, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Azzurro}" Command="{Binding CercaArticoliCommand}" />                
             </StackLayout>
-            </StackLayout> 
-        </StackLayout>
-        </ScrollView>
+        </StackLayout> 
+        </Grid>
+            </ScrollView>
     </ContentPage.Content>
 </ContentPage>
