--- a/Omal/Views/SearchV.xaml
+++ b/Omal/Views/SearchV.xaml
@@ -33,8 +33,7 @@
                 <Button Text="{Binding BtnCerca, Converter={StaticResource UpperCaseConverter}}" HorizontalOptions="Center"  Command="{Binding SearchWithCategoriesCommand }" Margin="0,10,0,50"/>
             </StackLayout>
             <StackLayout  Grid.Row="1" Margin="0,0,0,0" BackgroundColor="Transparent"  Orientation="Vertical">
-                
-                <Entry Margin="5" TextColor="White"  BackgroundColor="#60A5D1" Placeholder="{Binding ProdottoRicercato}" Text="{Binding ProductNameFilter, Mode=TwoWay}"  />
+                <CControls:CualevaRoundedEntry CualevaRoundedEntryBackgroundColor="#60A5D1"  LeftPadding="10"  BorderRadius="10"   Margin="5" TextColor="White"  BackgroundColor="Transparent" Placeholder="{Binding ProdottoRicercato}" Text="{Binding ProductNameFilter, Mode=TwoWay}" />
                 <Button HorizontalOptions="Center" Margin="10" Command="{Binding SearchWithProductNameCommand, Mode=TwoWay}" Text="{Binding BtnCerca, Converter={StaticResource UpperCaseConverter}}" />
             </StackLayout>
         </Grid>
